<resources>
    <string name="travel_create">Viagem Criada com sucesso!</string>
    <string name="travel_create_error">Erro ao criar viagem :(</string>
    
    <string name="spent_create">Gasto criado com sucesso!</string>
    <string name="spent_create_error">Erro ao criar gasto :(</string>
    
    <string name="confirm_travel_delete">Deseja excluir a viagem?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="edit">Editar</string>
    <string name="spents_realized">Gastos Realizados</string>
    <string name="remove">Remover</string>
    <string name="options">Opções</string>
    <string name="app_name">MyTravel</string>
    <string name="username">Usuario</string>
    <string name="password">Senha</string>
    <string name="login">Acessar</string>
    <string name="auth_error">Erro de autenticação</string>
    <string name="my_travels">Minhas Viagens</string>
	<string name="new_travel">Nova Viagem</string>
	<string name="configurations">Configurações</string>
	<string name="destiny">Destino</string>
	<string name="travel_kind">Tipo da Viagem</string>
	<string name="leisure">Lazer</string>
	<string name="business">Negócios</string>
	<string name="date_start">Data da Saída</string>
	<string name="date_finish">Data da Chegada</string>
	<string name="date_select">Selecione a data</string>
	<string name="create_new_travel">Criar nova Viagem</string>
	<string name="budget">Orçamento</string>
	<string name="people_quantity">Quantidade de Pessoas</string>
	<string name="new_spent">Novo Gasto</string>
	<string name="category">Categoria</string>
	<string name="value">Valor</string>
	<string name="spent_date">Data</string>
	<string name="description">Descrição</string>
	<string name="place">Local</string>
	<string name="spent">Gasto</string>
	<string name="remove_spent">Remover Gasto</string>
	
	<string name="travel_mode_summary">Sumário de modo viagem</string>
	<string name="travel_mode">Modo viagem</string>
	<string name="limit_value">Valor limite</string>
	<string name="limit_value_summary">Sumário para valor limite</string>
	<string name="preferences">Preferências</string>
	
	<string name="keep_connected">Manter Conectado</string>
	
	<string-array name="spent_categories">
	    <item>Alimentação</item>
	    <item>Hospedagem</item>
	    <item>Combustível</item>
	    <item>Transporte</item>
	    <item>Outros</item>
	</string-array>	
</resources>
