<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#015488"
        android:orientation="vertical">
        
        <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/new_spent"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textStyle="bold" />
        
        <TextView
			android:id="@+id/destiny"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textStyle="bold" />
        
        <TextView 
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/category" />
        
        <Spinner 
            android:id="@+id/category"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/category"
            />
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            
            <TableRow >         
                <TextView android:text="@string/value"/>
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/spent_date" />
            </TableRow>
            
            <TableRow >
                <EditText 
                    android:id="@+id/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
                
                <Button
					android:id="@+id/spent_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:onClick="selectDate"
					android:text="@string/date_select" />   
            </TableRow>
        </TableLayout>
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/description" />

	    <EditText
	        android:id="@+id/description"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/place" />
	
	    <EditText
	        android:id="@+id/place"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
	
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="createSpent"
	        android:text="@string/spent" />
        
    </LinearLayout>
    
 </LinearLayout>