<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        />
	<EditText 
	    android:id="@+id/username"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text">
	    <requestFocus />
	</EditText>
    
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        />
	<EditText 
	    android:id="@+id/password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword">
	    <requestFocus />
	</EditText>
	
	<CheckBox 
	    android:id="@+id/keepConnected"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/keep_connected" />
	
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:onClick="login"
	    android:text="@string/login" />
	
</LinearLayout>
